test/expected/declare_fsi_v.out
declare f as function (x as static int)
                            ^
29: syntax error: "static": "as" expected ("static" is a keyword)
